force-app/main/default/objects/Account/fields/Partnership_Age_Years__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Age_Years__c</fullName>
    <formula>IF(NOT(ISBLANK(Partnership_Start_Date__c)), (TODAY() - Partnership_Start_Date__c ) / 365, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnership Age (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>