force-app/main/default/objects/Account/fields/Partnership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Start_Date__c</fullName>
    <description>Date that partnership with this supplier began</description>
    <label>Partnership Start Date</label>
    <type>Date</type>
</CustomField>