force-app/main/default/objects/Account/fields/Supply_Category__c.field-meta.xml
<CustomField>
    <fullName>Supply_Category__c</fullName>
    <description>Category of product that this supplier provides</description>
    <label>Supply Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Flavoring</fullName>
            </value>
            <value>
                <fullName>Pastries</fullName>
            </value>
            <value>
                <fullName>Cups</fullName>
            </value>
            <value>
                <fullName>Utensils</fullName>
            </value>
            <value>
                <fullName>Napkins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>